[gd_scene load_steps=113 format=2]

[ext_resource path="res://Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Adventurer/adventurer-slide-00.png" type="Texture" id=2]
[ext_resource path="res://Assets/Adventurer/adventurer-slide-01.png" type="Texture" id=3]
[ext_resource path="res://Assets/Adventurer/adventurer-idle-00.png" type="Texture" id=4]
[ext_resource path="res://Assets/Adventurer/adventurer-idle-01.png" type="Texture" id=5]
[ext_resource path="res://Assets/Adventurer/adventurer-idle-02.png" type="Texture" id=6]
[ext_resource path="res://Assets/Adventurer/adventurer-idle-03.png" type="Texture" id=7]
[ext_resource path="res://Assets/Adventurer/adventurer-cast-00.png" type="Texture" id=8]
[ext_resource path="res://Assets/Adventurer/adventurer-cast-01.png" type="Texture" id=9]
[ext_resource path="res://Assets/Adventurer/adventurer-cast-02.png" type="Texture" id=10]
[ext_resource path="res://Assets/Adventurer/adventurer-cast-03.png" type="Texture" id=11]
[ext_resource path="res://Assets/Adventurer/adventurer-attack3-01.png" type="Texture" id=12]
[ext_resource path="res://Assets/Adventurer/adventurer-attack3-02.png" type="Texture" id=13]
[ext_resource path="res://Assets/Adventurer/adventurer-attack3-03.png" type="Texture" id=14]
[ext_resource path="res://Assets/Adventurer/adventurer-attack3-04.png" type="Texture" id=15]
[ext_resource path="res://Assets/Adventurer/adventurer-attack3-05.png" type="Texture" id=16]
[ext_resource path="res://Assets/Adventurer/adventurer-air-attack3-loop-00.png" type="Texture" id=17]
[ext_resource path="res://Assets/Adventurer/adventurer-air-attack3-loop-01.png" type="Texture" id=18]
[ext_resource path="res://Assets/Adventurer/adventurer-crouch-00.png" type="Texture" id=19]
[ext_resource path="res://Assets/Adventurer/adventurer-crouch-01.png" type="Texture" id=20]
[ext_resource path="res://Assets/Adventurer/adventurer-crouch-02.png" type="Texture" id=21]
[ext_resource path="res://Assets/Adventurer/adventurer-crouch-03.png" type="Texture" id=22]
[ext_resource path="res://Assets/Adventurer/adventurer-crnr-jmp-00.png" type="Texture" id=23]
[ext_resource path="res://Assets/Adventurer/adventurer-crnr-jmp-01.png" type="Texture" id=24]
[ext_resource path="res://Assets/Adventurer/adventurer-air-attack-3-end-00.png" type="Texture" id=25]
[ext_resource path="res://Assets/Adventurer/adventurer-air-attack-3-end-01.png" type="Texture" id=26]
[ext_resource path="res://Assets/Adventurer/adventurer-air-attack-3-end-02.png" type="Texture" id=27]
[ext_resource path="res://Assets/Adventurer/adventurer-fall-00.png" type="Texture" id=28]
[ext_resource path="res://Assets/Adventurer/adventurer-fall-01.png" type="Texture" id=29]
[ext_resource path="res://Assets/Adventurer/adventurer-cast-loop-00.png" type="Texture" id=30]
[ext_resource path="res://Assets/Adventurer/adventurer-cast-loop-01.png" type="Texture" id=31]
[ext_resource path="res://Assets/Adventurer/adventurer-cast-loop-02.png" type="Texture" id=32]
[ext_resource path="res://Assets/Adventurer/adventurer-cast-loop-03.png" type="Texture" id=33]
[ext_resource path="res://Assets/Adventurer/adventurer-swrd-drw-00.png" type="Texture" id=34]
[ext_resource path="res://Assets/Adventurer/adventurer-swrd-drw-01.png" type="Texture" id=35]
[ext_resource path="res://Assets/Adventurer/adventurer-swrd-drw-02.png" type="Texture" id=36]
[ext_resource path="res://Assets/Adventurer/adventurer-swrd-drw-03.png" type="Texture" id=37]
[ext_resource path="res://Assets/Adventurer/adventurer-stand-00.png" type="Texture" id=38]
[ext_resource path="res://Assets/Adventurer/adventurer-stand-01.png" type="Texture" id=39]
[ext_resource path="res://Assets/Adventurer/adventurer-stand-02.png" type="Texture" id=40]
[ext_resource path="res://Assets/Adventurer/adventurer-smrslt-00.png" type="Texture" id=41]
[ext_resource path="res://Assets/Adventurer/adventurer-smrslt-01.png" type="Texture" id=42]
[ext_resource path="res://Assets/Adventurer/adventurer-smrslt-02.png" type="Texture" id=43]
[ext_resource path="res://Assets/Adventurer/adventurer-smrslt-03.png" type="Texture" id=44]
[ext_resource path="res://Assets/Adventurer/adventurer-swrd-shte-00.png" type="Texture" id=45]
[ext_resource path="res://Assets/Adventurer/adventurer-swrd-shte-01.png" type="Texture" id=46]
[ext_resource path="res://Assets/Adventurer/adventurer-swrd-shte-02.png" type="Texture" id=47]
[ext_resource path="res://Assets/Adventurer/adventurer-swrd-shte-03.png" type="Texture" id=48]
[ext_resource path="res://Assets/Adventurer/adventurer-attack2-00.png" type="Texture" id=49]
[ext_resource path="res://Assets/Adventurer/adventurer-attack2-01.png" type="Texture" id=50]
[ext_resource path="res://Assets/Adventurer/adventurer-attack2-02.png" type="Texture" id=51]
[ext_resource path="res://Assets/Adventurer/adventurer-attack2-03.png" type="Texture" id=52]
[ext_resource path="res://Assets/Adventurer/adventurer-attack2-04.png" type="Texture" id=53]
[ext_resource path="res://Assets/Adventurer/adventurer-attack2-05.png" type="Texture" id=54]
[ext_resource path="res://Assets/Adventurer/adventurer-run-00.png" type="Texture" id=55]
[ext_resource path="res://Assets/Adventurer/adventurer-run-01.png" type="Texture" id=56]
[ext_resource path="res://Assets/Adventurer/adventurer-run-02.png" type="Texture" id=57]
[ext_resource path="res://Assets/Adventurer/adventurer-run-03.png" type="Texture" id=58]
[ext_resource path="res://Assets/Adventurer/adventurer-run-04.png" type="Texture" id=59]
[ext_resource path="res://Assets/Adventurer/adventurer-run-05.png" type="Texture" id=60]
[ext_resource path="res://Assets/Adventurer/adventurer-idle-2-00.png" type="Texture" id=61]
[ext_resource path="res://Assets/Adventurer/adventurer-idle-2-01.png" type="Texture" id=62]
[ext_resource path="res://Assets/Adventurer/adventurer-idle-2-02.png" type="Texture" id=63]
[ext_resource path="res://Assets/Adventurer/adventurer-idle-2-03.png" type="Texture" id=64]
[ext_resource path="res://Assets/Adventurer/adventurer-crnr-clmb-00.png" type="Texture" id=65]
[ext_resource path="res://Assets/Adventurer/adventurer-crnr-clmb-01.png" type="Texture" id=66]
[ext_resource path="res://Assets/Adventurer/adventurer-crnr-clmb-02.png" type="Texture" id=67]
[ext_resource path="res://Assets/Adventurer/adventurer-crnr-clmb-03.png" type="Texture" id=68]
[ext_resource path="res://Assets/Adventurer/adventurer-crnr-clmb-04.png" type="Texture" id=69]
[ext_resource path="res://Assets/Adventurer/adventurer-jump-00.png" type="Texture" id=70]
[ext_resource path="res://Assets/Adventurer/adventurer-jump-01.png" type="Texture" id=71]
[ext_resource path="res://Assets/Adventurer/adventurer-jump-02.png" type="Texture" id=72]
[ext_resource path="res://Assets/Adventurer/adventurer-jump-03.png" type="Texture" id=73]
[ext_resource path="res://Assets/Adventurer/adventurer-air-attack2-00.png" type="Texture" id=74]
[ext_resource path="res://Assets/Adventurer/adventurer-air-attack2-01.png" type="Texture" id=75]
[ext_resource path="res://Assets/Adventurer/adventurer-air-attack2-02.png" type="Texture" id=76]
[ext_resource path="res://Assets/Adventurer/adventurer-air-attack1-00.png" type="Texture" id=77]
[ext_resource path="res://Assets/Adventurer/adventurer-air-attack1-01.png" type="Texture" id=78]
[ext_resource path="res://Assets/Adventurer/adventurer-air-attack1-02.png" type="Texture" id=79]
[ext_resource path="res://Assets/Adventurer/adventurer-air-attack1-03.png" type="Texture" id=80]
[ext_resource path="res://Assets/Adventurer/adventurer-attack1-00.png" type="Texture" id=81]
[ext_resource path="res://Assets/Adventurer/adventurer-attack1-01.png" type="Texture" id=82]
[ext_resource path="res://Assets/Adventurer/adventurer-attack1-02.png" type="Texture" id=83]
[ext_resource path="res://Assets/Adventurer/adventurer-attack1-03.png" type="Texture" id=84]
[ext_resource path="res://Assets/Adventurer/adventurer-attack1-04.png" type="Texture" id=85]
[ext_resource path="res://Assets/Adventurer/adventurer-ladder-climb-00.png" type="Texture" id=86]
[ext_resource path="res://Assets/Adventurer/adventurer-ladder-climb-01.png" type="Texture" id=87]
[ext_resource path="res://Assets/Adventurer/adventurer-ladder-climb-02.png" type="Texture" id=88]
[ext_resource path="res://Assets/Adventurer/adventurer-ladder-climb-03.png" type="Texture" id=89]
[ext_resource path="res://Assets/Adventurer/adventurer-crnr-grb-00.png" type="Texture" id=90]
[ext_resource path="res://Assets/Adventurer/adventurer-crnr-grb-01.png" type="Texture" id=91]
[ext_resource path="res://Assets/Adventurer/adventurer-crnr-grb-02.png" type="Texture" id=92]
[ext_resource path="res://Assets/Adventurer/adventurer-crnr-grb-03.png" type="Texture" id=93]
[ext_resource path="res://Assets/Adventurer/adventurer-items-00.png" type="Texture" id=94]
[ext_resource path="res://Assets/Adventurer/adventurer-items-01.png" type="Texture" id=95]
[ext_resource path="res://Assets/Adventurer/adventurer-items-02.png" type="Texture" id=96]
[ext_resource path="res://Assets/Adventurer/adventurer-wall-slide-00.png" type="Texture" id=97]
[ext_resource path="res://Assets/Adventurer/adventurer-wall-slide-01.png" type="Texture" id=98]
[ext_resource path="res://Assets/Adventurer/adventurer-hurt-00.png" type="Texture" id=99]
[ext_resource path="res://Assets/Adventurer/adventurer-hurt-01.png" type="Texture" id=100]
[ext_resource path="res://Assets/Adventurer/adventurer-hurt-02.png" type="Texture" id=101]
[ext_resource path="res://Assets/Adventurer/adventurer-die-00.png" type="Texture" id=102]
[ext_resource path="res://Assets/Adventurer/adventurer-die-01.png" type="Texture" id=103]
[ext_resource path="res://Assets/Adventurer/adventurer-die-02.png" type="Texture" id=104]
[ext_resource path="res://Assets/Adventurer/adventurer-die-03.png" type="Texture" id=105]
[ext_resource path="res://Assets/Adventurer/adventurer-die-04.png" type="Texture" id=106]
[ext_resource path="res://Assets/Adventurer/adventurer-die-05.png" type="Texture" id=107]
[ext_resource path="res://Assets/Adventurer/adventurer-die-06.png" type="Texture" id=108]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "slide",
"speed": 12.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 12.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": false,
"name": "cast",
"speed": 12.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": false,
"name": "attack_spin",
"speed": 12.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "air_attack_loop",
"speed": 12.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "crouch",
"speed": 12.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 24 ) ],
"loop": false,
"name": "corner_jmp",
"speed": 12.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ) ],
"loop": false,
"name": "air_attack_loop_end",
"speed": 12.0
}, {
"frames": [ ExtResource( 28 ), ExtResource( 29 ) ],
"loop": true,
"name": "fall",
"speed": 12.0
}, {
"frames": [ ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ) ],
"loop": true,
"name": "cast_loop",
"speed": 12.0
}, {
"frames": [ ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ) ],
"loop": false,
"name": "sword_draw",
"speed": 12.0
}, {
"frames": [ ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ) ],
"loop": false,
"name": "stand",
"speed": 12.0
}, {
"frames": [ ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ) ],
"loop": false,
"name": "air_flip",
"speed": 12.0
}, {
"frames": [ ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ) ],
"loop": false,
"name": "sword_seath",
"speed": 12.0
}, {
"frames": [ ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ) ],
"loop": false,
"name": "attack_heavy",
"speed": 12.0
}, {
"frames": [ ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ) ],
"loop": true,
"name": "run",
"speed": 12.0
}, {
"frames": [ ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ) ],
"loop": true,
"name": "idle_sword",
"speed": 12.0
}, {
"frames": [ ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ) ],
"loop": false,
"name": "corner_climb",
"speed": 12.0
}, {
"frames": [ ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ) ],
"loop": false,
"name": "jump",
"speed": 12.0
}, {
"frames": [ ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ) ],
"loop": false,
"name": "air_attack_2",
"speed": 5.0
}, {
"frames": [ ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ) ],
"loop": false,
"name": "air_attack_1",
"speed": 12.0
}, {
"frames": [ ExtResource( 81 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 84 ), ExtResource( 85 ) ],
"loop": false,
"name": "attack_light",
"speed": 24.0
}, {
"frames": [ ExtResource( 86 ), ExtResource( 87 ), ExtResource( 88 ), ExtResource( 89 ) ],
"loop": true,
"name": "ladder_climb",
"speed": 12.0
}, {
"frames": [ ExtResource( 90 ), ExtResource( 91 ), ExtResource( 92 ), ExtResource( 93 ) ],
"loop": true,
"name": "corner_grab",
"speed": 12.0
}, {
"frames": [ ExtResource( 94 ), ExtResource( 95 ), ExtResource( 96 ) ],
"loop": false,
"name": "use_item",
"speed": 12.0
}, {
"frames": [ ExtResource( 97 ), ExtResource( 98 ) ],
"loop": true,
"name": "wall_slide",
"speed": 12.0
}, {
"frames": [ ExtResource( 99 ), ExtResource( 100 ), ExtResource( 101 ) ],
"loop": false,
"name": "hurt",
"speed": 6.0
}, {
"frames": [ ExtResource( 102 ), ExtResource( 103 ), ExtResource( 104 ), ExtResource( 105 ), ExtResource( 106 ), ExtResource( 107 ), ExtResource( 108 ) ],
"loop": false,
"name": "die",
"speed": 12.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

radius = 6.0
height = 16.0

[sub_resource type="RectangleShape2D" id=5]

extents = Vector2( 10, 7 )

[sub_resource type="RectangleShape2D" id=4]

extents = Vector2( 10, 7 )

[node name="Player" type="KinematicBody2D"]
z_index = 5
collision_layer = 4
collision_mask = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
frame = 3
playing = true

[node name="tunnel_detector" type="RayCast2D" parent="."]
position = Vector2( -4, 0 )
enabled = true
cast_to = Vector2( 0, -15 )
collision_mask = 2

[node name="tunnel_detector2" type="RayCast2D" parent="."]
position = Vector2( 4, 0 )
enabled = true
cast_to = Vector2( 0, -15 )
collision_mask = 2

[node name="enemy_detector" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 20, 0 )
collision_mask = 8

[node name="collision_shape_stand" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 2 )

[node name="collision_shape_crouch" type="CollisionShape2D" parent="."]
position = Vector2( 0, 11 )
shape = SubResource( 5 )

[node name="collision_shape_slide" type="CollisionShape2D" parent="."]
position = Vector2( 0, 11 )
shape = SubResource( 4 )

[node name="player_cast_position_2d" type="Position2D" parent="."]
position = Vector2( 18, 2.5 )

[node name="player_base_position_2d" type="Position2D" parent="."]
position = Vector2( 0, 18 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="Timers" type="Node" parent="."]

[node name="sword_seath_timer" type="Timer" parent="Timers"]
wait_time = 2.0
one_shot = true

[node name="death_timer" type="Timer" parent="Timers"]
one_shot = true

[node name="cast_loop_timer" type="Timer" parent="Timers"]
one_shot = true

[node name="energy_regen_timer" type="Timer" parent="Timers"]
wait_time = 5.0
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
current = true
limit_left = 0
limit_top = -160
limit_right = 1136
limit_bottom = 200
smoothing_enabled = true
smoothing_speed = 10.0
editor_draw_limits = true

[node name="Node2D" type="Node2D" parent="."]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_animation_finished"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_screen_exited"]
[connection signal="timeout" from="Timers/sword_seath_timer" to="." method="_on_sword_seath_timer_timeout"]
[connection signal="timeout" from="Timers/death_timer" to="." method="_on_death_timer_timeout"]
[connection signal="timeout" from="Timers/cast_loop_timer" to="." method="_on_cast_loop_timer_timeout"]
[connection signal="timeout" from="Timers/energy_regen_timer" to="." method="_on_energy_regen_timer_timeout"]
